--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "src/types/**/*.d.ts"],
+  "include": [
+    "src/**/*",
+    "src/types/**/*.d.ts",
+    "src/util/mail/templates/*.html"
+  ],
   "exclude": ["node_modules"]
 }
