--- a/worker/package.json
+++ b/worker/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "amqplib": "^0.10.8",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.34.2",
