--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.842.0",
-    "@aws-sdk/s3-request-presigner": "^3.842.0",
     "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -24,16 +22,22 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
+    "file-type": "^21.0.0",
+    "inversify": "^7.5.4",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "reflect-metadata": "^0.2.2",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.34.2",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
+    "@types/file-type": "^10.6.0",
     "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
