--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,12 +6,10 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
-  "include": [
-    "src/**/*",
-    "src/types/**/*.d.ts",
-    "src/util/mail/templates/*.html"
-  ],
+  "include": ["src/**/*", "src/types/**/*.d.ts", "src/util/mail/templates/*.html"],
   "exclude": ["node_modules"]
 }
