--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,3 +30,9 @@ SMTP_PORT=465
 SMTP_SECURE=1
 SMTP_USERNAME="host@mail.com"
 SMTP_PASSWORD="password"
+
+# STORAGE S3 BUCKET
+S3_ENDPOINT="http://localhost:9000"
+S3_REGION="us-east-1"
+S3_USER="user"
+S3_PASSWORD="password"
