--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,16 @@ services:
       MINIO_ROOT_PASSWORD: minio123
     command: server /data --console-address ":9001"
 
+  worker:
+    build:
+      context: ./worker
+    container_name: worker
+    depends_on:
+      - rabbitmq
+      - minio
+    env_file:
+      - ./worker/.env
+    command: ['node', 'dist/app.js']
+
 volumes:
   minio-data:
