--- a/worker/package.json
+++ b/worker/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
+    "@types/dotenv": "^6.1.1",
     "amqplib": "^0.10.8",
+    "dotenv": "^17.2.0",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.34.2",
     "uuid": "^11.1.0"
