--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser-dynamic": "^19.2.5",
     "@angular/router": "^19.2.5",
     "@popperjs/core": "^2.11.8",
-    "@tailwindcss/postcss": "^4.0.17",
-    "postcss": "^8.5.3",
+    "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^4.0.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
