--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -31,13 +32,13 @@
     "reflect-metadata": "^0.2.2",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.34.2",
+    "typeorm": "^0.3.25",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
-    "@types/file-type": "^10.6.0",
     "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
@@ -45,6 +46,7 @@
     "@types/cors": "^2.8.19",
     "@types/escape-html": "^1.0.4",
     "@types/express": "^5.0.3",
+    "@types/file-type": "^10.6.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.13",
