--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,14 @@
 PROD=1 #change to 1 for production
 
 # DATABASE
-DB_HOST="host"
-DB_NAME="name"
-DB_USER="user"
-DB_PASS="pass"
+DB_TYPE=mariadb
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=imagemaxxeruser
+DB_PASS=apppass
+DB_NAME=imagemaxxer
+DB_LOGGING=true
+DB_SYNC=true
 
 # AUTH
 AUTH_JWT_SECRET="secret"
