--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,7 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
-    "mysql2": "^3.14.1",
+    "mysql2": "^3.14.3",
     "reflect-metadata": "^0.2.2",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.34.2",
@@ -55,6 +56,6 @@
     "@types/validator": "^13.15.2",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.2"
   }
 }
