--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false
   },
   "include": ["src/**/*", "src/types/**/*.d.ts", "src/util/mail/templates/*.html"],
   "exclude": ["node_modules"]
