worker db connection

--- a/worker/.env.example
+++ b/worker/.env.example
@@ -1,3 +1,13 @@
+# DATABASE
+DB_TYPE=mariadb
+DB_HOST=127.0.0.1
+DB_PORT=33306
+DB_USER=imagemaxxeruser
+DB_PASS=apppass
+DB_NAME=imagemaxxer
+DB_LOGGING=true
+DB_SYNC=true
+
 # QUEUE
 QUEUE_HOSTNAME="amqp://rabbitmq"
 
