--- a/worker/package.json
+++ b/worker/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "reflect-metadata": "^0.2.2",
+    "class-transformer": "^0.5.1",
+    "typeorm": "^0.3.25",
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@types/dotenv": "^6.1.1",
