--- a/worker/.env.example
+++ b/worker/.env.example
@@ -6,7 +6,7 @@ DB_USER=imagemaxxeruser
 DB_PASS=apppass
 DB_NAME=imagemaxxer
 DB_LOGGING=true
-DB_SYNC=true
+DB_SYNC=false
 
 # QUEUE
 QUEUE_HOSTNAME="amqp://rabbitmq"
