--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -6,7 +6,10 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false
   },
   "include": ["src/**/*", "src/types/**/*.d.ts", "src/util/mail/templates/*.html"],
   "exclude": ["node_modules"]
